// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductImage debe mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
</div>
`;
